--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
     <title>Todo App</title>
     <link 
       href='https://fonts.googleapis.com/css?family=Lato:300,400,700' 
-      rel='stylesheet' 
-      type='text/css'>
+      rel='stylesheet' >
     <link 
       rel="stylesheet" 
       href="style.css" 
-      type="text/css" 
       MEDIA="screen" 
       charset="utf-8">
   </HEAD>
@@ -59,6 +57,6 @@
         </li>
       </ul>
     </div>
-    <script type="text/javascript" SRC="app.js"></script>
+    <script SRC="app.js"></script>
   </body>
 </html>
