--- a/index.html
+++ b/index.html
@@ -10,54 +10,54 @@
       media="screen" 
       charset="utf-8">
   </head>
-  <body>
-    <aside class="aaa">
-      <img src="./eisenhower-matrix.jpg" alt="matrix">
+  <body class="page">
+    <aside class="info">
+      <img class="info__img" src="./eisenhower-matrix.jpg" alt="matrix">
       <a 
-        class="more_inf" 
+        class="info__link" 
         href="https://goal-life.com/page/method/matrix-eisenhower"
         >Want more details?</a>
     </aside>
-    <main class="centered-main-page-element">
-      <section id="topSectionForAddingElementToList">
+    <main class="todo">
+      <section class="todo__add" id="todo__add_first-section">
         <h1 style="display: none;">Add new item</h1>
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
+        <label class="todo__title todo__add__title" for="todo__input_add-new-task">Add Item</label>
+        <div class="todo__wrap">
           <input 
-            id="new-task"
-            class="task" 
+            id="todo__input_add-new-task"
+            class="todo__input todo__elem_size" 
             type="text">
-          <button>Add</button>
+          <button class="todo__button">Add</button>
         </div>
       </section>
-      <section>
-        <h3>Todo</h3>
-        <ul id="incompleteTasks">
-          <li>
-            <input type="checkbox">
-            <label class="task">Pay Bills</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete"><img src="./remove.svg" alt="remove"></button>
+      <section class="todo__all">
+        <h3 class="todo__title">Todo</h3>
+        <ul class="todo__list" id="todo__list_incomplete">
+          <li class="todo__item">
+            <input class="todo__checkbox" type="checkbox">
+            <label class="todo__label todo__elem_size">Pay Bills</label>
+            <input  type="text" class="todo__input todo__elem_size">
+            <button class="todo__button todo__button_edit">Edit</button>
+            <button class="todo__button todo__button_delete"><img class="todo__img" src="./remove.svg" alt="remove"></button>
           </li>
-          <li class="editMode">
-            <input type="checkbox">
-            <label class="task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task">
-            <button class="edit">Save</button>
-            <button class="delete"><img src="./remove.svg" alt="remove"></button>
+          <li class="todo__item todo__item_edit">
+            <input class="todo__checkbox" type="checkbox">
+            <label class="todo__label todo__label_edit todo__elem_size">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="todo__input todo__input_edit todo__elem_size">
+            <button class="todo__button todo__button_edit">Save</button>
+            <button class="todo__button todo__button_delete"><img class="todo__img" src="./remove.svg" alt="remove"></button>
           </li>
         </ul>
       </section>
-      <section>
-        <h3>Completed</h3>
-        <ul id="completed-tasks">
-          <li>
-            <input type="checkbox" checked>
-            <label class="task">See the Doctor</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete"><img src="./remove.svg" alt="remove"></button>
+      <section class="todo__completed">
+        <h3 class="todo__title">Completed</h3>
+        <ul class="todo__list" id="todo__list_completed">
+          <li class="todo__item">
+            <input class="todo__checkbox" type="checkbox" checked>
+            <label class="todo__label todo__label_completed todo__elem_size">See the Doctor</label>
+            <input type="text" class="todo__input todo__elem_size">
+            <button class="todo__button todo__button_edit">Edit</button>
+            <button class="todo__button todo__button_delete"><img class="todo__img" src="./remove.svg" alt="remove"></button>
           </li>
         </ul>
       </section>
@@ -65,3 +65,7 @@
     <script src="app.js"></script>
   </body>
 </html>
+
+
+
+
