(refactor(html,css): remove from css unnessary styles and single style for css file, add break lines in html(no rule))

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   </head>
   <body class="page">
     <aside class="info">
-      <img class="info__img" src="./eisenhower-matrix.jpg" alt="matrix">
+      <img 
+        class="info__img" 
+        src="./eisenhower-matrix.jpg" 
+        alt="matrix">
       <a 
         class="info__link" 
         href="https://goal-life.com/page/method/matrix-eisenhower"
@@ -21,13 +24,17 @@
     <main class="todo">
       <section class="todo__add" id="todo__add_first-section">
         <h1 style="display: none;">Add new item</h1>
-        <label class="todo__title todo__add__title" for="todo__input_add-new-task">Add Item</label>
+        <label 
+          class="todo__title todo__add__title" 
+          for="todo__input_add-new-task">Add Item</label>
         <div class="todo__wrap">
           <input 
             id="todo__input_add-new-task"
             class="todo__input todo__elem_size" 
             type="text">
-          <button class="todo__button" id="todo__button_add-new-task">Add</button>
+          <button 
+            class="todo__button" 
+            id="todo__button_add-new-task">Add</button>
         </div>
       </section>
       <section class="todo__all">
@@ -38,14 +45,27 @@
             <label class="todo__label todo__elem_size">Pay Bills</label>
             <input  type="text" class="todo__input todo__elem_size hidden">
             <button class="todo__button todo__button_edit">Edit</button>
-            <button class="todo__button todo__button_delete"><img class="todo__img todo__img_remove" src="./remove.svg" alt="remove"></button>
+            <button class="todo__button todo__button_delete">
+              <img 
+                class="todo__img todo__img_remove" 
+                src="./remove.svg" 
+                alt="remove">
+            </button>
           </li>
           <li class="todo__item todo__item_edit">
             <input class="todo__checkbox" type="checkbox">
             <label class="todo__label hidden todo__elem_size">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="todo__input todo__elem_size">
+            <input 
+              class="todo__input todo__elem_size"
+              type="text" 
+              value="Go Shopping" >
             <button class="todo__button todo__button_edit">Save</button>
-            <button class="todo__button todo__button_delete"><img class="todo__img todo__img_remove" src="./remove.svg" alt="remove"></button>
+            <button class="todo__button todo__button_delete">
+              <img 
+                class="todo__img todo__img_remove" 
+                src="./remove.svg" 
+                alt="remove">
+            </button>
           </li>
         </ul>
       </section>
@@ -57,7 +77,12 @@
             <label class="todo__label todo__elem_size todo__label_completed">See the Doctor</label>
             <input type="text" class="todo__input todo__elem_size hidden">
             <button class="todo__button todo__button_edit">Edit</button>
-            <button class="todo__button todo__button_delete"><img class="todo__img todo__img_remove" src="./remove.svg" alt="remove"></button>
+            <button class="todo__button todo__button_delete">
+              <img 
+                class="todo__img todo__img_remove" 
+                src="./remove.svg" 
+                alt="remove">
+            </button>
           </li>
         </ul>
       </section>
