--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <li class="todo__item">
             <input class="todo__checkbox" type="checkbox">
             <label class="todo__label todo__elem_size">Pay Bills</label>
-            <input  type="text" class="todo__input todo__elem_size hidden">
+            <input  type="text" class="todo__input todo__elem_size hidden" value="Pay Bills">
             <button class="todo__button todo__button_edit">Edit</button>
             <button class="todo__button todo__button_delete">
               <img 
